@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-27-?
+DATE: 02/02/2026
+STAFF: lec
+wts2-1795/sprt-208/GXD Index Custom reports small issue
+        modified:   GXD_IndexOverview.py
+
 TAG: qcreports_db-6-0-27-1
 DATE: 01/15/2026
 STAFF: lec
